--- a/uzdevumi/uzd1/index.html
+++ b/uzdevumi/uzd1/index.html
@@ -4,10 +4,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta charset="utf8">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <link rel="stylesheet" type="text/css" href="../../styles.css">
-    <script type="text/javascript" >
-      var i = 0;
-    </script>
+    <!-- <link rel="stylesheet" type="text/css" href="../styles.css"> -->
+    <script src="./funkcijas.js"> </script>
+    
+   
   </head>
   <body class="container">
     <div id="task">
@@ -19,11 +19,15 @@
         <li>Izveidot ievada logu, kura vērtība tiktu mainīta uz i mainīgā vērtību pie pogas nospiešanas</li>
       </ol>
     </div>
+    
     <div id="root" class="row justify-content-center">
       <button class="col-md-auto btn btn-danger" onClick="samazinat()">Samazināt</button>
-      <input class="col-md-3 form-control" type="text" id="vertiba" value="0" />
+      <input class="col-md-3 form-control" type="text" id="vertiba" value="1" />
       <button class="col-md-auto btn btn-success" onClick="palielinat()">Palielināt</button>
     </div>
+
+  
+
     <div id="info">
       <h3>Noderīgas saites</h3>
       <ul>
