--- a/uzdevumi/uzd2/index.html
+++ b/uzdevumi/uzd2/index.html
@@ -5,21 +5,21 @@
     <meta charset="utf8">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="../../styles.css">
-    <script type="text/javascript" >
-      var masivs = [];
-    </script>
+    <script src="./funkcijas.js"> </script>
+    
   </head>
   <body class="container">
     <div id="task">
       <h1>Manipulācijas ar masīvu</h1>
       <ol>
-        <li>Izveidot funkciju, kura pievienos vērtību masīva beigās</li>
-        <li>Izveidot funkciju, kura izņems vērtību no masīva beigām</li>
-        <li>Izveidot funkciju, kura izdrukās visu masīvu kā HTML DOM elementu</li>
-        <li>Izveidot funkciju, kura iestarpinās jaunu elementu masīvā pēc norādītā indeksa</li>
-        <li>Izveidot funkciju, kura izņems elementu no masīva pēc norādītā indeksa</li>
+        <li><button onclick="pievienot()"></button>Izveidot funkciju, kura pievienos vērtību masīva beigās</li>
+        <li><button></button>Izveidot funkciju, kura izņems vērtību no masīva beigām</li>
+        <li><button></button>Izveidot funkciju, kura izdrukās visu masīvu kā HTML DOM elementu</li>
+        <li><button></button>Izveidot funkciju, kura iestarpinās jaunu elementu masīvā pēc norādītā indeksa</li>
+        <li><button></button>Izveidot funkciju, kura izņems elementu no masīva pēc norādītā indeksa</li>
       </ol>
     </div>
+    <p id="vieta"></p>
     <div id="root">
     </div>
     <div id="info">
